/*
 * Copyright (C) 2025 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#####################hydra_fuzz######################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "video_processing_engine/fuzztest"
############################fuzztest#############################
ohos_fuzztest("Imagehdr2sdrFuzzTest") {
    module_output_path = module_output_path
    fuzz_config_file = "$VIDEO_PROCESSING_ENGINE_ROOT_DIR/test/fuzztest/imagehdr2sdr_fuzzer"
    include_dirs = [
      "$VIDEO_PROCESSING_ENGINE_ROOT_DIR/../media_foundation/video_processing_engine/interface/kits/c"
    ]
    include_dirs += [ "./" ]
    cflags = [
      "-g",
      "-O0",
      "-Wno-unused-variable",
      "-fno-omit-frame-pointer",
    ]
    sources = [
      "imagehdr2sdr_fuzzer.cpp"
    ]
    external_deps = [
      "graphic_2d:libnative_color_space_manager",
      "image_framework:pixelmap",
      "c_utils:utils",
      "hilog:libhilog",
      "ipc:ipc_single",
      "media_foundation:native_media_core",
      "media_foundation:media_foundation",
      "window_manager:libwm",
    ]
    deps = [
      "$FRAMEWORK_DIR:image_processing"
    ]
}