# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/video_processing_engine/config.gni")

video_moduletest_native_include_dirs = [
  "$VIDEO_PROCESSING_ENGINE_ROOT_DIR/test/ndk/moduletest/common",
  "$VIDEO_PROCESSING_ENGINE_ROOT_DIR/interface/kits/c",
]

video_moduletest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]

##################################################################################################################
ohos_unittest("vpe_video_native_module_test") {
  module_out_path = "video_processing_engine/moduletest"
  include_dirs = video_moduletest_native_include_dirs
  include_dirs += [ "./" ]
  cflags = video_moduletest_cflags

  sources = [
    "api_test.cpp",
    "func_test.cpp",
    "reli_test.cpp",
    "video_sample.cpp",
  ]

  deps = [
    "$VIDEO_PROCESSING_ENGINE_ROOT_DIR/framework:video_processing",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:libgraphic_utils",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
    "media_foundation:native_media_core",
    "window_manager:libwm",
    "json:nlohmann_json_static",
    "openssl:libcrypto_shared"
  ]
  resource_config_file = "$VIDEO_PROCESSING_ENGINE_ROOT_DIR/test/ndk/moduletest/resources/ohos_test.xml"
}
